# demo-omni

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
demo_omni/: demo.py
docker-images-build/core/: Dockerfile
